# paraglide

./: .pre-commit-config.yaml  .pyre_configuration  LICENSE  README.md  pyproject.toml
.github/workflows/: python-test.yaml
data/: eli-lta-2023-1180-paragraph-refs.json  eli-lta-2023-1180.html  eli-lta-2023-1180.json
data/llama-indices/cohere-embed-v3/: docstore.json  index_store.json  vector_store.json
src/paraglide/data/: models.py
src/paraglide/parsers/: retsinformation.py
src/paraglide/qa/: parental_leave.py
tests/unit/parsers/: test_retsinformation_1180.py
tools/: extract_paragraph_refs.py  parse_statute.py  scrape_statute.py  streamlit_ui_parental_leave.py
