[project]
name = "paraglide"
version = "0.1.0"
description = "App to make Danish statutes accessible and navigable."
authors = [
    {name = "Omar Ali Sheikh", email = "sheikhomar@gmail.com"},
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "playwright>=1.39.0",
    "anyio<4.0.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
]

[tool.pdm.scripts]
tests = "pytest -v -s tests"
scrape-statute = "python -m tools.scrape_statute"
