[project]
name = "paraglide"
version = "0.1.0"
description = "App to make Danish statutes accessible and navigable."
authors = [
    {name = "Omar Ali Sheikh", email = "sheikhomar@gmail.com"},
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "playwright>=1.39.0",
    "anyio<4.0.0",
    "click>=8.1.7",
    "pydantic>=2.4.2",
    "beautifulsoup4>=4.12.2",
    "dateparser>=1.1.8",
    "llama-index>=0.8.59",
    "cohere>=4.32",
    "streamlit>=1.28.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "pyre-check>=0.9.19",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
]

[tool.pdm.scripts]
tests = "pytest -v -s tests"
unit-tests = "pytest -v -s tests/unit"
extract-paragraph-refs = "python -m tools.extract_paragraph_refs"
scrape-statute = "python -m tools.scrape_statute"
parse-statute = "python -m tools.parse_statute"
build-index-cohere = "python -m tools.build_index_cohere"
ui-parental-leave = "streamlit run tools/streamlit_ui_parental_leave.py"

[tool.ruff]
line-length = 130

[tool.ruff.lint.isort]
case-sensitive = true
